Scrollbars Desined & Other UI Fixes

--- a/src/components/Cards/PortfolioCards/PortfolioCards.scss
+++ b/src/components/Cards/PortfolioCards/PortfolioCards.scss
@@ -100,10 +100,10 @@
     &__projectLink {
         font-size: 1.7rem;
         font-weight: bold;
-        color: $color-primary-dark;
+        color: $color-tertiary;
         padding: 1rem 2rem;
         border-radius: 1.5rem;
-        border: 2px solid $color-primary-dark;
+        border: 2px solid $color-tertiary;
         transition: color .3s, background-color .3s;
 
         &:active,
@@ -111,7 +111,7 @@
         &:hover {
             font-weight: normal;
             color: $color-white-dull;
-            background-color: $color-primary-dark
+            background-color: $color-tertiary;
         }
     }
 }
